--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -59,7 +59,7 @@
               <div class="mb-3">
                 <label class="form-label" for="userPwd">비밀번호</label>
                 <div class="password-toggle">
-                  <input class="form-control" type="password" name ="userPwd" id="userPwd" required>
+                  <input class="form-control" type="password" name ="userPwd" id="userPwd" placeholder="비밀번호를 입력해주세요." required>
                   <label class="password-toggle-btn" aria-label="Show/hide password">
                     <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
                   </label>
