--- a/src/main/resources/templates/join.html
+++ b/src/main/resources/templates/join.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 
-<head>
+<head xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
   <meta charset="utf-8">
   <title>UKIDS | 회원가입</title>
   <!-- SEO Meta Tags-->
@@ -12,23 +12,23 @@
   <!-- Viewport-->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Favicon and Touch Icons-->
-  <link rel="apple-touch-icon" sizes="180x180" href="img/ukids/logo.jpg">
-  <link rel="icon" type="image/png" sizes="32x32" href="img/ukids/logo.jpg">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/ukids/logo.jpg">
+  <link rel="apple-touch-icon" sizes="180x180" th:href="@{/img/ukids/logo.jpg}">
+  <link rel="icon" type="image/png" sizes="32x32" th:href="@{/img/ukids/logo.jpg}">
+  <link rel="icon" type="image/png" sizes="16x16" th:href="@{/img/ukids/logo.jpg}">
   <link rel="manifest" href="site.webmanifest">
-  <link rel="mask-icon" color="#fe6a6a" href="safari-pinned-tab.svg">
+  <link rel="mask-icon" color="#fe6a6a" th:href="@{/safari-pinned-tab.svg}">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
   <!-- Vendor Styles including: Font Icons, Plugins, etc.-->
-  <link rel="stylesheet" media="screen" href="vendor/simplebar/dist/simplebar.min.css" />
-  <link rel="stylesheet" media="screen" href="vendor/tiny-slider/dist/tiny-slider.css" />
-  <link rel="stylesheet" media="screen" href="vendor/drift-zoom/dist/drift-basic.min.css" />
-  <link rel="stylesheet" media="screen" href="vendor/lightgallery.js/dist/css/lightgallery.min.css" />
+  <link rel="stylesheet" media="screen" th:href="@{/vendor/simplebar/dist/simplebar.min.css}" />
+  <link rel="stylesheet" media="screen" th:href="@{/vendor/tiny-slider/dist/tiny-slider.css}" />
+  <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
+  <link rel="stylesheet" media="screen" th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
   <!-- Main Theme Styles + Bootstrap-->
-  <link rel="stylesheet" media="screen" href="css/theme.min.css">
-  <link rel="stylesheet" media="screen" href="css/cgw.css">
-  <link rel="stylesheet" media="screen" href="css/header.css">
-  <link rel="stylesheet" media="screen" href="css/footer.css">
+  <link rel="stylesheet" media="screen" th:href="@{/css/theme.min.css}">
+  <link rel="stylesheet" media="screen" th:href="@{/css/cgw.css}">
+  <link rel="stylesheet" media="screen" th:href="@{/css/header.css}">
+  <link rel="stylesheet" media="screen" th:href="@{/css/footer.css}">
 
   <!--jquery-->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
@@ -54,157 +54,12 @@
 <body class="handheld-toolbar-enabled">
 
   <!-- 로그인 모달 관련  -->
-  <div class="modal fade" id="signin-modal" tabindex="-1" role="dialog">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header bg-secondary">
-          <ul class="nav nav-tabs card-header-tabs" role="tablist">
-            <li class="nav-item"><a class="nav-link fw-medium active logincolor" href="#signin-tab" data-bs-toggle="tab"
-                role="tab" aria-selected="true"><i class="ci-user me-2 mt-n1"></i>일반회원 로그인</a></li>
-            <li class="nav-item"><a class="nav-link fw-medium logincolor" href="#signup-tab" data-bs-toggle="tab"
-                role="tab" aria-selected="false"><i class="ci-book me-2 mt-n1"></i>선생님 로그인</a></li>
-          </ul>
-          <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body tab-content py-4">
-          <form class="needs-validation tab-pane fade show active" autocomplete="off" novalidate id="signin-tab">
-            <div class="mb-3">
-              <label class="form-label" for="si-email">아이디</label>
-              <input class="form-control" type="email" id="si-email" placeholder="아이디를 입력해주세요." required>
-            </div>
-            <div class="mb-3">
-              <label class="form-label" for="si-password">비밀번호</label>
-              <div class="password-toggle">
-                <input class="form-control" type="password" id="si-password" required>
-                <label class="password-toggle-btn" aria-label="Show/hide password">
-                  <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                </label>
-              </div>
-            </div>
-            <div class="mb-3 d-flex flex-wrap justify-content-between">
-              <div class="form-check mb-2">
-                <input class="form-check-input" type="checkbox" id="si-remember">
-                <label class="form-check-label" for="si-remember">아이디를 기억하시겠습니까?</label>
-              </div><a class="fs-sm login" href="#">비밀번호 찾기</a>
-            </div>
-            <a href="#"><img class="cgw16 cgw17 cgw18" src="img/ukids/8.png"></a>
-            <button class="btn btn-login btn-shadow d-block cgw17 cgw10" type="submit">로그인</button>
-          </form>
-          <form class="needs-validation tab-pane fade" autocomplete="off" novalidate id="signup-tab">
-            <div class="mb-3">
-              <label class="form-label" for="si-email">아이디</label>
-              <input class="form-control" type="email" id="si-email" placeholder="아이디를 입력해주세요." required>
-            </div>
-            <div class="mb-3">
-              <label class="form-label" for="si-password">비밀번호</label>
-              <div class="password-toggle">
-                <input class="form-control" type="password" id="si-password" required>
-                <label class="password-toggle-btn" aria-label="Show/hide password">
-                  <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                </label>
-              </div>
-            </div>
-            <div class="mb-3 d-flex flex-wrap justify-content-between">
-              <div class="form-check mb-2">
-                <input class="form-check-input" type="checkbox" id="si-remember">
-                <label class="form-check-label" for="si-remember">아이디를 기억하시겠습니까?</label>
-              </div><a class="fs-sm login" href="#">비밀번호 찾기</a>
-            </div>
-            <a href="#"><img class="cgw16 cgw17 cgw18" src="img/ukids/9.png"></a>
-            <button class="btn btn-login btn-shadow d-block cgw17 cgw10" type="submit">로그인</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+ <div th:fragment="modal" th:replace="~{common :: modal}"></div>
 
   <main class="page-wrapper">
 
     <!-- 헤더!!!!!! -->
-    <header class="navbar navbar-expand-lg navbar-light shadow-sm">
-      <div class="container">
-
-        <!-- Brand -->
-        <a class="navbar-brand d-none d-lg-block order-lg-1" href="index.html">
-          <img width="65" src="img/ukids/logo.jpg" alt="ukids" />
-        </a>
-
-        <!-- Toolbar -->
-        <div class="navbar-toolbar d-flex align-items-center order-lg-3">
-
-          <!-- 로그인 전!!!!!!!! -->
-
-          <a href="#signin-modal" data-bs-toggle="modal">
-            <button type="button" class="btn btn-primary rounded-pill" id="sign">
-              <i class="ci-locked"></i>
-              <span>로그인</span>
-            </button>
-          </a>
-          <a href="join.html">
-            <button type="button" class="btn btn-primary rounded-pill" id="sign">
-              <i class="ci-user me-2"></i>
-              <span class="jointext">회원가입</span>
-            </button>
-          </a>
-
-          <!-- 로그인 후!!!!!!!!!!!! -->
-
-          <!-- <a class="navbar-tool ms-1 ms-lg-0 me-n1 me-lg-2" href="mypage.html">
-              <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-user"></i></div>
-              <div class="navbar-tool-text ms-n3"><small>안녕하세요,유키즈님</small><p class="mypg">마이페이지</p></div>
-            </a>
-            
-            <a class="navbar-tool ms-3" href="index.html">
-              <div class="navbar-tool-icon-box bg-secondary">
-                <i class="ci-unlocked" style="font-size: large; padding-top: 13px;"></i>
-              </div>
-            </a> -->
-
-          <a class="navbar-tool ms-3" href="mypage-7.html">
-            <div class="navbar-tool-icon-box bg-secondary">
-              <i class="navbar-tool-icon ci-cart"></i>
-            </div>
-          </a>
-
-        </div>
-
-        <!-- 메뉴 -->
-        <div class="collapse navbar-collapse me-auto order-lg-2" id="navbarCollapse">
-          <hr class="d-lg-none my-3">
-          <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside"
-                id="nav1">어린이집/유치원</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item hmenu" href="nursery-main.html">어린이집</a></li>
-                <li><a class="dropdown-item hmenu" href="kinder-main.html">유치원</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside"
-                id="nav2">아동관련시설</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item hmenu" href="welfare-main.html">아동복지시설</a></li>
-                <li><a class="dropdown-item hmenu" href="playground.html">놀이시설</a></li>
-                <li><a class="dropdown-item hmenu" href="hospital-main.html">병원</a></li>
-
-              </ul>
-            </li>
-            <li class="nav-item"><a class="nav-link" id="nav3" href="toy-main.html">장난감대여</a></li>
-            <li class="nav-item"><a class="nav-link" id="nav4" href="book.html">추천도서</a></li>
-            <li class="nav-item"><a class="nav-link" id="nav5" href="news.html">주요뉴스</a></li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-bs-auto-close="outside"
-                id="nav6">커뮤니티</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item hmenu" href="notice.html">공지사항</a></li>
-                <li><a class="dropdown-item hmenu" href="community.html ">자유게시판</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </header>
+    <header th:fragment="header" th:replace="~{common :: header}"></header>
     <!-- 헤더 끝 -->
     <!-- Page Title-->
     <div class="bg-position-top-center bg-repeat-0 py-5 bg-dark-cgw3">
@@ -234,8 +89,60 @@
                   <div class="product-details-cgw pb-3 cgw16 ms-5 mt-4 border-end">
                     <div class="col-sm-10">
                       <label class="form-label" for="account-fn">아이디</label><br>
-                      <input class="form-control-cgw2" type="text" id="account-fn">
-                      <a href="#"><button class="btn btn-primary-cgw2 btn-sm mx-4" type="button">중복확인</button></a>
+                      <input class="form-control-cgw2" type="text" id="account-fn" >
+                      <button class="btn btn-primary-cgw2 btn-sm mx-4" type="button" id="checkDuplicate" value="중복검사">중복확인</button>
+                      
+                      <!-- 회원가입 관련 스크립트 코드 -->
+                      <script type="text/javascript">
+                  	$(function() {
+                		$("#pass2").blur((event) => {
+                			let pass1 = $("#pass1").val();			
+                			let pass2 = $(event.target).val();
+                			
+                			if(pass1.trim() != pass2.trim()) {
+                				alert("비밀번호가 일치하지 않습니다.");
+                				
+                				$("#pass1").val("");
+                				$(event.target).val("");
+                				$("#pass1").focus();
+                			}
+                		});
+                    	
+                	    $("#enrollSubmit").on("click", () => {
+                	    	// TODO 전송하기 전에 각 영역에 유효성 검사로직을 추가하는 부분!
+                	    	//return false;
+                	    });
+                	    
+                	    // 아이디 중복을 확인하는 AJAX 코드
+                	    $("#checkDuplicate").on("click", () => {
+                	    	let id = $("#newId").val().trim();
+                	    	
+                	    	if(id.length < 4){
+                	    		alert("아이디는 최소 4글자입니다.")
+                	    		return;
+                	    	}
+                	    	
+                	    	$.ajax({
+                	    		type:"get",
+                	    		url:"[[@{/member/idCheck}]]",
+                	    		data:{id}, // 속성값이 키값과 같은 이름을 가질때 하나로만 key-value 채운다.
+                	    		success:
+                	    			(data)=>{ // validate key값
+                	    				console.log(data);
+                	    				if(data.validate === true){
+                	    					alert("이미 사용중인 아이디입니다.")
+                	    				} else{
+                	    					alert("사용 가능합니다.")
+                	    				}
+                	    			},
+                	    		error:
+                	    			(e)=>{
+                						console.log(e);	    				
+                	    			}
+                	    	});
+                	    });
+                	});
+                      </script>
                     </div>
                     <div class="col-sm-9">
                       <label class="form-label" for="account-ln">이름</label>
@@ -335,90 +242,7 @@
   </main>
   <!-- 푸터!!!!!!!!!!-->
   <!-- Footer-->
-  <footer class="footer pt-5" id="footercolor">
-    <div class="px-lg-3 pt-2 pb-4">
-      <div class="mx-auto px-3" style="max-width: 80rem;">
-        <div class="row">
-          <div class="col-xl-2 col-lg-3 col-sm-4 pb-2 mb-4">
-            <div class="mt-n1"><a class="d-inline-block align-middle" href="index.html"><img class="d-block mb-4"
-                  src="img/ukids/logo.jpg" width="117" alt="Cartzilla"></a></div>
-          </div>
-          <div class="col-xl-3 col-lg-4 col-sm-4">
-            <div class="widget widget-links widget-light pb-2 mb-4">
-              <h3 class="widget-title text-dark" id="cate2">카테고리</h3>
-              <ul class="widget-list">
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="kinder-main.html">어린이집/유치원</a>
-                </li>
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="welfare-main.html">아동관련시설</a>
-                </li>
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="toy-main.html">장난감대여</a></li>
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="book.html">추천도서</a></li>
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="news.html">주요뉴스</a></li>
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="community.html">커뮤니티</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-xl-3 col-lg-4 col-sm-4">
-            <div class="widget widget-links widget-light pb-2 mb-4">
-              <h3 class="widget-title text-dark" id="cate2">유키즈</h3>
-              <ul class="widget-list">
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="#">02-123-4567</a></li>
-                <li class="widget-list-item"><a class="widget-list-link" id="cate" href="#">ukids05@multi.com</a></li>
-              </ul>
-            </div>
-            <div class="widget widget-light pb-2 mb-4">
-              <h3 class="widget-title text-dark" id="cate2">팔로우</h3><a class="btn-social bs-dark bs-twitter me-2 mb-2"
-                href="#"><i class="ci-twitter"></i></a><a class="btn-social bs-dark bs-facebook me-2 mb-2" href="#"><i
-                  class="ci-facebook"></i></a><a class="btn-social bs-dark bs-instagram me-2 mb-2" href="#"><i
-                  class="ci-instagram"></i></a><a class="btn-social bs-dark bs-youtube me-2 mb-2" href="#"><i
-                  class="ci-youtube"></i></a>
-            </div>
-          </div>
-          <div class="col-xl-4 col-sm-8">
-            <div class="widget pb-2 mb-4">
-              <h3 class="widget-title text-dark pb-1" id="cate2">구독하기</h3>
-              <form class="subscription-form validate"
-                action="https://studio.us12.list-manage.com/subscribe/post?u=c7103e2c981361a6639545bd5&amp;amp;id=29ca296126"
-                method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
-                <div class="input-group flex-nowrap"><i
-                    class="ci-mail position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
-                  <input class="form-control rounded-start" type="email" name="EMAIL" placeholder="이메일을 입력해주세요."
-                    required>
-                  <button class="btn btn-primary" type="submit" name="subscribe" id="sub">구 &nbsp&nbsp독</button>
-                </div>
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                  <input class="subscription-form-antispam" type="text" name="b_c7103e2c981361a6639545bd5_29ca296126"
-                    tabindex="-1">
-                </div>
-                <div class="form-text text-dark opacity-50">유키즈의 소식을 구독해보세요.</div>
-                <div class="subscription-status"></div>
-              </form>
-            </div>
-            <div class="widget pb-2 mb-4">
-              <h3 class="widget-title text-dark pb-1" id="cate2">다운로드</h3>
-              <div class="d-flex flex-wrap">
-                <div class="me-2 mb-2"><a class="btn-market btn-apple" href="#" role="button"><span
-                      class="btn-market-subtitle">Download on the</span><span class="btn-market-title">App
-                      Store</span></a></div>
-                <div class="mb-2"><a class="btn-market btn-google" href="#" role="button"><span
-                      class="btn-market-subtitle">Download on the</span><span class="btn-market-title">Google
-                      Play</span></a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="px-lg-3 py-3" id="footerunder">
-      <div class="d-sm-flex justify-content-between align-items-center mx-auto px-3" style="max-width: 80rem;">
-        <div class="fs-xs text-light opacity-50 text-center text-sm-start py-3">© All rights reserved. Made by <a
-            class="text-light" href="index.html" target="_blank" rel="noopener">ukids</a></div>
-        <div class="py-3"><img class="d-block mx-auto mx-sm-start" src="img/cards-alt.png" width="187"
-            alt="Payment methods"></div>
-      </div>
-    </div>
-  </footer>
+	<footer th:fragment="footer" th:replace="~{common :: footer}"></footer>	
 
 
   <!-- Toolbar for handheld devices (Default)-->
